nnn<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.5</version>
		<relativePath /> <!-- lookup parent from repository -->
    </parent>

    <groupId>jp.co.maruzenshowa.malos</groupId>
    <artifactId>malos-test-ccmtrepo-service-framework</artifactId>
    <version>1.0.0</version>
    <name>malos-test-ccmtrepo-service-framework</name>
    <packaging>pom</packaging>
    
    <modules>
        <module>./malos-service-framework-common</module>
        <module>./malos-service-framework-backend</module>
        <module>./malos-service-framework-batch</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <openapi.version>2.0.4</openapi.version>
        <commons-csv.version>1.10.0</commons-csv.version>
        <modelmapper.version>3.2.0</modelmapper.version>
        <lombok.version>1.18.30</lombok.version>
        <aws.version>3.1.0</aws.version>
        <pmdVersion>7.0.0-rc4</pmdVersion>
        <pmd.config.path>ruleset.xml</pmd.config.path>
    </properties>
    
    <dependencyManagement>
		<dependencies>
			<dependency>
	            <groupId>io.awspring.cloud</groupId>
	            <artifactId>spring-cloud-aws-dependencies</artifactId>
	            <version>${aws.version}</version>
	            <type>pom</type>
	            <scope>import</scope>
	        </dependency>
	    </dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>malos-test-artifact-malos-test-artifact-repo-mvn</id>
			<name>malos-test-artifact-malos-test-artifact-repo-mvn</name>
			<url>https://malos-test-artifact-339712759665.d.codeartifact.ap-northeast-1.amazonaws.com/maven/malos-test-artifact-repo-mvn/</url>
		</repository>
	</distributionManagement>

    <dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
            <exclusions>
		      <exclusion> 
		        <groupId>ch.qos.logback</groupId>
      			<artifactId>logback-core</artifactId>
		      </exclusion>
		      <exclusion> 
		        <groupId>ch.qos.logback</groupId>
      		    <artifactId>logback-classic</artifactId>
		      </exclusion>
		      <exclusion> 
		        <groupId>org.apache.logging.log4j</groupId>
      		    <artifactId>log4j-to-slf4j</artifactId>
		      </exclusion>
		    </exclusions> 
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${openapi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${commons-csv.version}</version>
        </dependency>
		<dependency>
		    <groupId>org.hibernate.orm</groupId>
		    <artifactId>hibernate-community-dialects</artifactId>
		</dependency>
		<dependency>
            <groupId>org.modelmapper.extensions</groupId>
            <artifactId>modelmapper-spring</artifactId>
            <version>${modelmapper.version}</version>
        </dependency>
		<!-- log4j2 -->  
	    <dependency>  
	        <groupId>org.apache.logging.log4j</groupId>  
	        <artifactId>log4j-core</artifactId>  
	    </dependency>  
	    <dependency>  
	        <groupId>org.apache.logging.log4j</groupId>  
	        <artifactId>log4j-api</artifactId>   
	    </dependency>
	    <dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-slf4j2-impl</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-jul</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-layout-template-json</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.retry</groupId>
			<artifactId>spring-retry</artifactId>
		</dependency>
		<dependency>
		    <groupId>io.awspring.cloud</groupId>
		    <artifactId>spring-cloud-aws-starter</artifactId>
		</dependency>
		
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <scope>test</scope>
		</dependency>

	</dependencies>
    
    <build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.21.2</version>
					<dependencies>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-compat6</artifactId>
							<version>7.0.0-rc4+with-pr4749</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-core</artifactId>
							<version>${pmdVersion}</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-java</artifactId>
							<version>${pmdVersion}</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-javascript</artifactId>
							<version>${pmdVersion}</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-jsp</artifactId>
							<version>${pmdVersion}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
        <plugins>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-surefire-plugin</artifactId>
			  <configuration>
			    <argLine>
			      -XX:+EnableDynamicAgentLoading
			      -Xshare:off
			    </argLine>
			  </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<configuration>
					<rulesets>
						<ruleset>${pmd.config.path}</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
					<consoleOutput>true</consoleOutput>
					<failsOnError>false</failsOnError>
					<linkXRef>false</linkXRef>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>9.2</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.8</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${project.build.directory}/jacoco/jacoco.exec</destFile>
						</configuration>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/jacoco/jacoco.exec</dataFile>
							<outputDirectory>${project.build.directory}/report/jacoco</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

        </plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<configuration>
					<rulesets>
						<ruleset>${pmd.config.path}</ruleset>
					</rulesets>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>